Bug 384284 - Display of upcoming special dates not obeying date range
Summary: Display of upcoming special dates not obeying date range
Status: RESOLVED FIXED
Alias: None
Product: kontact
Classification: Applications
Component: summary (other bugs)
Version First Reported In: 5.6.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-09-02 11:10 UTC by BingMyBong
Modified: 2017-09-27 14:24 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 17.12
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description BingMyBong 2017-09-02 11:10:11 UTC
With the latest version of Kontact, the Summary is showing a whole years worth of up and coming events but I have it set to show 30 days only.
I have altered the date range to 21 days and it still displays a years worth.
Comment 1 BingMyBong 2017-09-02 15:20:20 UTC
I meant "Upcoming Special Dates" and not events  - i changed the subject to reflect the correction
Comment 2 Allen Winter 2017-09-04 17:24:13 UTC
Seems to be ok for normal calendar events, but I do see Birthdays shown that are more than 200 days from now :)

are you seeing normal calendar events shown beyond the 30 day limit?
Comment 3 BingMyBong 2017-09-05 08:45:28 UTC
(In reply to Allen Winter from comment #2)
> Seems to be ok for normal calendar events, but I do see Birthdays shown that
> are more than 200 days from now :)
> 
> are you seeing normal calendar events shown beyond the 30 day limit?

Its just the "Upcoming Special Dates" showing a years worth, the events list is fine and seems to obey the date range set.
Comment 4 Allen Winter 2017-09-05 12:08:41 UTC
which type of special events though?
Holidays? Birthdays? Anniversaries?

from the calendar? from contacts?
Comment 5 BingMyBong 2017-09-05 13:21:34 UTC
(In reply to Allen Winter from comment #4)
> which type of special events though?
> Holidays? Birthdays? Anniversaries?
> 
> from the calendar? from contacts?

From contacts - birthdays only, i don't have any anniversaries or holidays set up.  I was under the impression that "Upcoming Events" were from the calendar and "Upcoming Special Dates" from the Birthdays & Anniversaries.
Comment 6 BingMyBong 2017-09-05 13:24:13 UTC
I forgot to mention that when I open Kontact and it takes quite a while before  the Summary is displayed, it used be almost immediate.
Comment 7 Allen Winter 2017-09-05 22:56:07 UTC
possible fix up for review at https://phabricator.kde.org/D7702
Comment 8 BingMyBong 2017-09-06 10:40:07 UTC
(In reply to Allen Winter from comment #7)
> possible fix up for review at https://phabricator.kde.org/D7702

Great. thanks.
Comment 9 Allen Winter 2017-09-23 15:04:47 UTC
Git commit 10fb4e6d599bacf84496bcef90ea089a55ba4de1 by Allen Winter.
Committed on 23/09/2017 at 15:02.
Pushed by winterz into branch 'Applications/17.08'.

specialdates/sdsummarywidget.cpp - Don't print birthdays beyond the days-ahead limit

Differential Revision: https://phabricator.kde.org/D7702
FIXED-IN: 17.12

M  +9    -6    src/kontactplugin/specialdates/sdsummarywidget.cpp

https://commits.kde.org/korganizer/10fb4e6d599bacf84496bcef90ea089a55ba4de1
Comment 10 Christoph Feck 2017-09-27 14:24:58 UTC
Allen, fixes pushed to Applications/17.08 branch will appear in KDE Applications 17.08.2 (KDEPIM 5.6.2).