specialdates/sdsummarywidget.cpp - Don't print birthdays beyond the days-ahead limit

Differential Revision: https://phabricator.kde.org/D7702
BUG: 384284
FIXED-IN: 17.12